# base-cpp-external

./: .gitmodules  CMakeLists.txt  PLAN.md  README.md
apps/main/: CMakeLists.txt  main.cpp
opt/: CMakeLists.txt
opt/luajit/: CMakeLists.txt
opt/luajit/lib/pkgconfig/: luajit.pc
opt/sol/: CMakeLists.txt
