file(GLOB DIRS ./*/CMakeLists.txt)

set(JSON_BuildTests OFF CACHE INTERNAL "")
set(CPR_BUILD_TESTS OFF CACHE INTERNAL "")

set(SOL2_GENERATE_SINGLE ON CACHE INTERNAL "")
set(SOL2_ENABLE_INSTALL OFF CACHE INTERNAL "")
set(SOL2_SINGLE ON CACHE INTERNAL "")

set(JSON_VALIDATOR_BUILD_TESTS OFF CACHE INTERNAL "")
set(JSON_VALIDATOR_BUILD_EXAMPLES OFF CACHE INTERNAL "")

foreach(T ${DIRS})
	get_filename_component(TS ${T} DIRECTORY)
	add_subdirectory(${TS})
endforeach(T)

set(LOC_LIBS ${LOC_LIBS} "nlohmann_json::nlohmann_json" CACHE INTERNAL "LOC_LIBS")
set(LOC_LIBS ${LOC_LIBS} "cpr" CACHE INTERNAL "LOC_LIBS")
set(LOC_LIBS ${LOC_LIBS} "httplib" CACHE INTERNAL "LOC_LIBS")
#set(LOC_LIBS ${LOC_LIBS} "zlib" CACHE INTERNAL "LOC_LIBS")


